27_matrix_input/grade.txt
Grading at Tue Dec 29 22:21:11 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c:5:0: error: ignoring #pragma warning  [-Werror=unknown-pragmas]
 #pragma warning(disable : 4996)
 ^
rotateMatrix.c:45:1: error: unknown type name ‘bool’
 bool meetRequirements(int** matrix) {
 ^
rotateMatrix.c: In function ‘meetRequirements’:
rotateMatrix.c:57:12: error: ‘false’ undeclared (first use in this function)
     return false;
            ^
rotateMatrix.c:57:12: note: each undeclared identifier is reported only once for each function it appears in
rotateMatrix.c:59:10: error: ‘true’ undeclared (first use in this function)
   return true;
          ^
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:94:3: error: unknown type name ‘bool’
   bool ret = meetRequirements(matrix);
   ^
rotateMatrix.c:95:14: error: ‘false’ undeclared (first use in this function)
   if (ret == false) {
              ^
rotateMatrix.c: In function ‘meetRequirements’:
rotateMatrix.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
